added resume and cd resume button

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <meta charset="UTF-8">
     <title>Pearl Jean</title>
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Pearl Jean's Resume" />
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" type="image/x-icon" href="pFav.png" />
@@ -9,7 +14,6 @@
 </head>
 
 <body>
-
     <!-- <div id="masthead"> -->
     <div class="container">
         <a href="index.html" id="nameLogo">Pearl Jean</a>
@@ -19,6 +23,9 @@
     <br><br>
 
     <div class="dropdown">
+        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="res.html">$ cd Resume</a></button>
+        <br><br>
+
         <button onclick="myFunction()" class="dropbtn">$ ls</button>
         <div id="myDropdown" class="dropdown-content">
             <input type="text" class="menu" placeholder="Search Repo Names" id="myInput" onkeyup="filterFunction()">
@@ -57,9 +64,6 @@
             }
         }
     </script>
-
-
-
 
 
 </body>
