added styling to resume

--- a/res.html
+++ b/res.html
@@ -27,9 +27,11 @@
                 <ul>
                     <li>e: <a href="mailto:perlegirl@protonmail.com" target="_blank">perlegirl@protonmail.com</a></li>
                     <li>w: <a href="http://pearljean.world">www.pearljean.world</a></li>
-                    <li>p: 404.936.5777</li>
-                    <li>instagram: pearl_jean_design</li>
-                    <li>Github: swanlake7</li>
+                    <li>p: <a>404.936.5777</a></li>
+                    <li>Instagram: <a href="https://www.instagram.com/pearl_jean_design/"
+                            target="_blank">pearl_jean_design</a>
+                    </li>
+                    <li>Github: <a href="https://github.com/swanlake7" target="_blank">swanlake7</a></li>
                 </ul>
             </div>
             <div class="clear"></div>
