--- a/res.html
+++ b/res.html
@@ -47,8 +47,8 @@
                     <div class="sectionContent">
                         <p>Creative and bilingual full stack developer. Passionate creator of stimulating web designs
                             and apps. Highly analytical thinker with four years of chemistry research experience both
-                            academically and professionally.Dedicated to learn and apply new knowledge to optimize apps’
-                            interface and efficiency.</p>
+                            academically and professionally.Dedicated to learn and apply new knowledge to create and
+                            optimize apps.</p>
                     </div>
                 </article>
                 <div class="clear"></div>
