--- a/res.html
+++ b/res.html
@@ -61,7 +61,7 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>GATA App</h2>
+                        <h2><a id="paperlink" href="https://github.com/swanlake7/GATA">GATA App</a></h2>
                         <div class="listi">
                             <ul>
                                 <li>GATA helps users realize their full potential and help them make strides towards
@@ -77,7 +77,8 @@
                     </article>
                     <br><br><br>
                     <article>
-                        <h2>Feelings the Food App</h2>
+                        <h2><a id="paperlink" href="https://github.com/swanlake7/Feeling-the-Food-App-Project">Feelings
+                                the Food App</a></h2>
                         <div class="listi">
                             <ul>
                                 <li>Feeling the Food allows users to search for plant based foods to
@@ -92,7 +93,7 @@
                     </article>
                     <br>
                     <article>
-                        <h2>LoCo App</h2>
+                        <h2><a id="paperlink" href="https://github.com/swanlake7/LoCo">LoCo App</a></h2>
                         <div class="listi">
                             <ul>
                                 <li>
@@ -127,11 +128,13 @@
                             <div class="listi">
                                 <ul>
                                     <li>
-                                        Second author of impactful paper published in the ACS Journal of Physical
+                                        Second author of an impactful <a id="paperlink"
+                                            href="https://pubs.acs.org/doi/10.1021/acs.jpclett.8b00784">paper</a>
+                                        published in the ACS Journal of Physical
                                         Chemistry.
                                     </li>
                                     <li>
-                                        Saved our laser equipment setup during a water-pipe accident in the lab.
+                                        Saved laser equipment during a water-pipe accident in the lab.
                                     </li>
                                 </ul>
                             </div>
@@ -149,8 +152,8 @@
                             <div class="listi">
                                 <ul>
                                     <li>Obtained results after two months and presented a poster on two occasions - for
-                                        the general public and for the chemistry department. Combined over 300 people
-                                        attended the events.
+                                        the general public and for the chemistry department. Combined over 300 attendees
+                                        at the events.
                                     </li>
 
                                 </ul>
@@ -180,16 +183,20 @@
                         <li>MySQL</li>
                         <li>Mongoose</li>
                         <li>MongoDB</li>
-                        <li>jQuery</li>
+                        <li>JQuery</li>
                         <li>AJAX</li>
                         <li>API</li>
-                        <li>NodeJS</li>
+                        <li>Node.js</li>
                         <li>Express</li>
                         <li>REACT</li>
                         <li>JSX</li>
-                        <li>Authentifications</li>
+                        <li>Authentification</li>
                         <li>Algorithms</li>
                         <Li>Github</Li>
+                        <li>Sequelize</li>
+                        <li>Handlebars</li>
+                        <li>Github Workflow</li>
+
                     </ul>
                 </div>
                 <div class="clear"></div>
