--- a/res.html
+++ b/res.html
@@ -19,7 +19,7 @@
             </div>
 
             <div id="name">
-                <h1 class="quickFade delayTwo">Pearl Jean!!!</h1>
+                <h1 class="quickFade delayTwo">Pearl Jean</h1>
                 <h2 class="quickFade delayThree">Developer & Designer</h2>
             </div>
 
