added contact info

--- a/index.html
+++ b/index.html
@@ -17,36 +17,27 @@
     <!-- <div id="masthead"> -->
     <div class="container">
         <a href="index.html" id="nameLogo">Pearl Jean</a>
+        <!-- <div>
+            <img id="headshot" src="photoshoot.JPG" alt="Pearl Profile Pic" />
+        </div> -->
 
     </div>
-    <br><br><br>
-
-    <p class="contact">
-
-        p:
-        e:
-        LinkedIn:
-        Instagram:
-
-    </p>
-
-    <br><br><br>
-    <div>
-        <img id="headshot" src="photoshoot.JPG" alt="Pearl Profile Pic" />
-    </div>
-
-
-
-    <!-- </div> -->
     <br>
     <br><br>
 
     <div class="dropdown">
 
+        <div id="contact">
+            perlegirl@protonmail.com <br>
+            <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn</a> <br>
+            <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
+                pearl_jean_design</a>
+        </div>
+
+        <br>
+
         <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="res.html">$ cd Resume</a></button>
         <br><br>
-
-
 
         <button onclick="myFunction()" class="dropbtn">$ ls</button>
         <div id="myDropdown" class="dropdown-content">
