added github and fixed margin in resume

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
         <div id="contact">
             perlegirl@protonmail.com <br>
+            <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7</a> <br>
             <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn</a> <br>
             <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
                 pearl_jean_design</a>
