--- a/res.html
+++ b/res.html
@@ -61,13 +61,15 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2><a id="paperlink" href="https://github.com/swanlake7/GATA">GATA App</a></h2>
+                        <h2><a id="paperlink" target="_blank" href="https://github.com/swanlake7/GATA">GATA App</a></h2>
                         <div class="listi">
                             <ul>
+                                <li><a id="paperlink" href="https://gatahabit.herokuapp.com/main" target="_blank">GATA
+                                        on Heroku</a>
+                                </li>
                                 <li>GATA helps users realize their full potential and help them make strides towards
                                     their
                                     goals.</li>
-
                                 <li>
                                     Coded front-end and database functionalities. Designed the flow of user interaction.
                                 </li>
@@ -77,10 +79,15 @@
                     </article>
                     <br><br><br>
                     <article>
-                        <h2><a id="paperlink" href="https://github.com/swanlake7/Feeling-the-Food-App-Project">Feelings
+                        <h2><a id="paperlink" target="_blank"
+                                href="https://github.com/swanlake7/Feeling-the-Food-App-Project">Feelings
                                 the Food App</a></h2>
                         <div class="listi">
                             <ul>
+                                <li><a id="paperlink" href="https://feeling-the-food.herokuapp.com/"
+                                        target="_blank">Feeling the Food
+                                        on Heroku</a>
+                                </li>
                                 <li>Feeling the Food allows users to search for plant based foods to
                                     enhance Muscle Gain, Energy, Focus and Sleep. Users have the ability to access an
                                     array
@@ -93,7 +100,7 @@
                     </article>
                     <br>
                     <article>
-                        <h2><a id="paperlink" href="https://github.com/swanlake7/LoCo">LoCo App</a></h2>
+                        <h2><a id="paperlink" target="_blank" href="https://github.com/swanlake7/LoCo">LoCo App</a></h2>
                         <div class="listi">
                             <ul>
                                 <li>
