added linkedin link

--- a/res.html
+++ b/res.html
@@ -27,6 +27,7 @@
                 <ul>
                     <li>e: <a href="mailto:perlegirl@protonmail.com" target="_blank">perlegirl@protonmail.com</a></li>
                     <li>w: <a href="http://pearljean.world">www.pearljean.world</a></li>
+                    <li>LI: <a href="https://www.linkedin.com/in/pearljean/">Pearl's LinkedIn</a></li>
                     <li>p: <a>404.936.5777</a></li>
                     <li>Instagram: <a href="https://www.instagram.com/pearl_jean_design/"
                             target="_blank">pearl_jean_design</a>
