--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pearl Jean</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="Pearl Jean's Resume" />
+    <meta name="description" content="Pearl Jean's Website" />
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
