--- a/res.html
+++ b/res.html
@@ -4,7 +4,7 @@
 <head>
     <title>Pearl Jean Resume</title>
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="The Curriculum Vitae of Joe Bloggs." />
+    <meta name="description" content="Pearl Jean Resume" />
     <meta charset="UTF-8">
     <link rel="icon" href="pFav.png" type="image/x-icon" />
     <link type="text/css" rel="stylesheet" href="res.css">
