added key technologies used

--- a/res.html
+++ b/res.html
@@ -20,7 +20,7 @@
 
             <div id="name">
                 <h1 class="quickFade delayTwo">Pearl Jean</h1>
-                <h2 class="quickFade delayThree">Developer & Designer</h2>
+                <h2 class="quickFade delayThree">Full Stack Developer</h2>
             </div>
 
             <div id="contactDetails" class="quickFade delayFour">
@@ -74,6 +74,9 @@
                                 <li>
                                     Coded front-end and database functionalities. Designed the flow of user interaction.
                                 </li>
+                                <li>
+                                    Key Technology Used: MERN Stack
+                                </li>
                             </ul>
                         </div>
                         <p> </p>
@@ -95,6 +98,9 @@
                                     of User Notes, Edibility and Medicinal Rating, and a history of recent search items.
                                 </li>
                                 <li>Contributed to both front and back end components.</li>
+                                <li>
+                                    Key Technology Used: APIs, JWT Authorization
+                                </li>
                             </ul>
                         </div>
                         <p></p>
@@ -110,6 +116,9 @@
                                 </li>
                                 <li>
                                     Designed front end user interactions.
+                                </li>
+                                <li>
+                                    Key Technology Used: APIs, CSS, Bulma
                                 </li>
                             </ul>
                         </div>
