--- a/index.html
+++ b/index.html
@@ -40,71 +40,9 @@
         <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="res.html">$ cd Resume</a></button>
         <br><br>
 
-        <button onclick="myFunction()" class="dropbtn">$ ls</button>
-        <div id="myDropdown" class="dropdown-content">
-            <input type="text" class="menu" placeholder="Search Repo Names" id="myInput" onkeyup="filterFunction()">
-            <a target="_blank" href="https://swanlake7.github.io/unit-4-game/">$ cd Crystal Collector Game </a>
-            <a target="_blank" href="https://echo-dave.github.io/LoCo/">$ cd LoCo App</a>
-            <a target="_blank" href="https://swanlake7.github.io/liri-node-app/">$ cd Liri Node App</a>
-            <a target="_blank" href="https://github.com/swanlake7/Friend-Finder">$ cd Friend Finder</a>
-            <a target="_blank" href="">$ cd Bamazon</a>
-            <a target="_blank" href="https://feeling-the-food.herokuapp.com/">$ cd Feeling the Food App</a>
-            <a target="_blank" href="">$ cd Scaper</a>
-            <a target="_blank" href="">$ cd Clicky Game</a>
-            <a target="_blank" href="https://gatahabit.herokuapp.com/">$ cd GATA App MVP</a>
-        </div>
+
+        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
     </div>
-
-
-    <script>
-        /* When the user clicks on the button,
-        toggle between hiding and showing the dropdown content */
-        function myFunction() {
-            document.getElementById("myDropdown").classList.toggle("show");
-        }
-
-        function filterFunction() {
-            var input, filter, ul, li, a, i;
-            input = document.getElementById("myInput");
-            filter = input.value.toUpperCase();
-            div = document.getElementById("myDropdown");
-            a = div.getElementsByTagName("a");
-            for (i = 0; i < a.length; i++) {
-                txtValue = a[i].textContent || a[i].innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    a[i].style.display = "";
-                } else {
-                    a[i].style.display = "none";
-                }
-            }
-        }
-
-
-
-        function myFunctionO() {
-            document.getElementById("myDropdownO").classList.toggle("showO");
-        }
-
-        function filterFunctionO() {
-            var input, filter, ul, li, a, i;
-            input = document.getElementById("myInput");
-            filter = input.value.toUpperCase();
-            div = document.getElementById("myDropdown");
-            a = div.getElementsByTagName("a");
-            for (i = 0; i < a.length; i++) {
-                txtValue = a[i].textContent || a[i].innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                    a[i].style.display = "";
-                } else {
-                    a[i].style.display = "none";
-                }
-            }
-        }
-
-
-
-    </script>
-
 
 </body>
 
