media query stuff

--- a/projex.html
+++ b/projex.html
@@ -1,1 +1,49 @@
-supp
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <title>Pearl's Projex</title>
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Pearl Jean's Website" />
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="reset.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/x-icon" href="pFav.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
+<body>
+    <!-- <div id="masthead"> -->
+    <div class="container">
+        <a href="projex.html" id="nameLogo">P</a>
+        <!-- <div>
+            <img id="headshot" src="photoshoot.JPG" alt="Pearl Profile Pic" />
+        </div> -->
+
+    </div>
+    <br>
+    <br><br>
+
+    <div class="dropdown">
+
+        <div id="contact">
+            perlegirl@protonmail.com <br>
+            <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7</a> <br>
+            <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn</a> <br>
+            <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
+                pearl_jean_design</a>
+        </div>
+
+        <br>
+
+        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="res.html">$ cd Resume</a></button>
+        <br><br>
+
+
+        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
+    </div>
+
+</body>
+
+</html>
