--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <div class="dropdown">
 
         <div id="contact">
-            perlegirl@protonmail.com <br>
+            Links:
+            <br>
+            perlegirl@protonmail.com<br>
             <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7</a> <br>
             <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn</a> <br>
             <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
@@ -44,7 +46,55 @@
         <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
     </div>
 
+    <div id="plist" class="">
+        <p>
+            <ul>
+                <li>GATA App
+                    <br>
+                    The Pain:
+                    <br>
+                    The Solution:
+                    <br>
+                    <button><a href="" target="_blank" class="">Deployed (Heroku)</a></button>
+                    <button><a href="" target="_blank" class="">Github Repo</a></button>
+                    <br>
+                    Key Technologies Used:
+                    <br>Role:
+                    <br>Future Direction:
+                </li>
+                <br>
+                <li>Feeling the Food
+                    <br>
+                    The Pain:
+                    <br>
+                    The Solution:
+                    <br>
+                    <button><a href="" target="_blank" class="">Deployed (Heroku)</a></button>
+                    <button><a href="" target="_blank" class="">Github Repo</a></button>
+                    <br>
+                    Key Technologies Used:
+                    <br>Role:
+                    <br>Future Direction:
+                </li>
+                <br>
+                <li>LoCo App
+                    <br>
+                    The Pain:
+                    <br>
+                    The Solution:
+                    <br>
+                    <button><a href="" target="_blank" class="">Deployed (Heroku)</a></button>
+                    <button><a href="" target="_blank" class="">Github Repo</a></button>
+                    <br>
+                    Key Technologies Used:
+                    <br>Role:
+                    <br>Future Direction:
+                </li>
+                <br>
 
+            </ul>
+        </p>
+    </div>
 
 
 </body>
