--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <br><br>
 
 
-        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
+        <!-- <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
     </div>
 
-    <div id="plist" class="">
+    <div id="plist" class="projex">
         <p>
             <ul>
                 <li>GATA App
@@ -94,7 +94,7 @@
 
             </ul>
         </p>
-    </div>
+    </div> -->
 
 
 </body>
