--- a/index.html
+++ b/index.html
@@ -14,38 +14,61 @@
 </head>
 
 <body>
-    <!-- <div id="masthead"> -->
     <div class="container">
         <a href="index.html" id="nameLogo">Pearl Jean</a>
         <!-- <div>
             <img id="headshot" src="photoshoot.JPG" alt="Pearl Profile Pic" />
         </div> -->
-
     </div>
     <br>
     <br><br>
 
-    <div class="dropdown">
-
-        <div id="contact">
-            Links:
-            <br>
-            perlegirl@protonmail.com<br>
-            <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7</a> <br>
-            <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn</a> <br>
-            <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
-                pearl_jean_design</a>
-        </div>
-
-        <br>
-
-        <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="res.html">$ cd Resume</a></button>
-        <br><br>
-
-
-        <!-- <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button>
+    <div>
+        <p id="ct">~/contacts</p> <br>
+        <p id="cmd">$ ls </p>
     </div>
 
+    <div class="dropdown">
+        <div id="contact">
+            perlegirl@protonmail.com<br>
+            <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7 &lt;link&gt; </a> <br>
+            <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn &lt;link&gt; </a> <br>
+            <a href="https://www.instagram.com/pearl_jean_design/" target="_blank">Instagram:
+                pearl_jean_design &lt;link&gt; </a>
+        </div>
+        <!-- <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button> -->
+    </div>
+
+    <div>
+        <p id="cmd">$ cd ../resume </p> <br>
+        <p id="ct">~/resume</p> <br>
+        <p id="cmd">$ ls </p> <br>
+    </div>
+    <div class="dropdown">
+        <div id="contact">
+            <a href="res.html" target="_blank">Resume &lt;link&gt; </a> <br>
+        </div>
+    </div>
+
+
+    <div>
+        <p id="cmd">$ cd ../projects </p> <br>
+        <p id="ct">~/projects</p> <br>
+        <p id="cmd">$ ls </p> <br>
+    </div>
+
+    <div class="dropdown">
+        <div id="contact">
+            <a href="https://github.com/swanlake7" target="_blank">GATA App &lt;link&gt; </a> <br>
+            <a href="https://github.com/swanlake7" target="_blank">Feeling the Food App &lt;link&gt; </a> <br>
+            <a href="https://github.com/swanlake7" target="_blank">LoCo App &lt;link&gt; </a> <br>
+
+        </div>
+        <!-- <button class="dropbtn"><a class="dropbtn alink" target="_blank" href="projex.html">$ cd Projects</a></button> -->
+    </div>
+    <br>
+
+    <!--     
     <div id="plist" class="projex">
         <p>
             <ul>
