--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
 
 
-    <div>
+    <!-- <div>
         <p id="cmd">$ cd ../projects </p> <br>
         <p id="ct">~/projects</p> <br>
         <p id="cmd">$ ls </p> <br>
@@ -64,7 +64,7 @@
             <a href="https://github.com/swanlake7" target="_blank">LoCo App &lt;link&gt; </a> <br>
         </div>
     </div>
-    <br>
+    <br> -->
 
     <!--     
     <div id="plist" class="projex">
@@ -83,37 +83,6 @@
                     <br>Role:
                     <br>Future Direction:
                 </li>
-                <br>
-                <li>Feeling the Food
-                    <br>
-                    The Pain:
-                    <br>
-                    The Solution:
-                    <br>
-                    <button><a href="" target="_blank" class="">Deployed (Heroku)</a></button>
-                    <button><a href="" target="_blank" class="">Github Repo</a></button>
-                    <br>
-                    Key Technologies Used:
-                    <br>Role:
-                    <br>Future Direction:
-                </li>
-                <br>
-                <li>LoCo App
-                    <br>
-                    The Pain:
-                    <br>
-                    The Solution:
-                    <br>
-                    <button><a href="" target="_blank" class="">Deployed (Heroku)</a></button>
-                    <button><a href="" target="_blank" class="">Github Repo</a></button>
-                    <br>
-                    Key Technologies Used:
-                    <br>Role:
-                    <br>Future Direction:
-                </li>
-                <br>
-
-            </ul>
         </p>
     </div> -->
 
