changes to limit my contacts exposure and edited some stuff

--- a/res.html
+++ b/res.html
@@ -28,7 +28,6 @@
                     <li>e: <a href="mailto:perlegirl@protonmail.com" target="_blank">perlegirl@protonmail.com</a></li>
                     <li>w: <a href="http://pearljean.world">www.pearljean.world</a></li>
                     <li>LI: <a href="https://www.linkedin.com/in/pearljean/">Pearl's LinkedIn</a></li>
-                    <li>p: <a>404.936.5777</a></li>
                     <li>Instagram: <a href="https://www.instagram.com/pearl_jean_design/"
                             target="_blank">pearl_jean_design</a>
                     </li>
@@ -166,15 +165,19 @@
                         <h2>Intern at the U.S. Department of Energy</h2>
                         <p class="subDetails">May-August 2016</p>
                         <p class="undoS">Designed experiments after discussing the desired results with the principal
-                            investigator.
-                            Communicated efficiently with principal investigator and mentor, for quickly updating
-                            everyone and moving the experiment forward.
+                            investigator. Communicated efficiently with
+                            my mentor and worked hard for results. <br> Accidentally discovered a new property of a
+                            material
+                            in development leading to
+                            more interesting research. Over-achieved and presented my results after just two months -
+                            events for chemists and for
+                            the general public, with over 300 attendees.
                             <div class="ka">Key Accomplishments:</div>
                             <div class="listi">
                                 <ul>
                                     <li>Obtained results after two months and presented a poster on two occasions - for
-                                        the general public and for the chemistry department. Combined over 300 attendees
-                                        at the events.
+                                        the general public and for the
+                                        chemistry department. Combined over 300 attendees at the events.
                                     </li>
 
                                 </ul>
