removed some info

--- a/resume.html
+++ b/resume.html
@@ -15,8 +15,8 @@
     <p>
 
         Pearl Jean
-        404-936-5777 | perlegirl@protonmail.com | Atlanta, GA
-        Github: swanlake7 | Portfolio: pearljean.world | Instagram: pearl_jean_design
+        perlegirl@protonmail.com | Atlanta, GA
+        Github: swanlake7 | Portfolio: pearljean.world
 
         TL; DR
         Creative and bilingual full stack developer. Passionate creator of stimulating web designs and apps. Highly
