--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="dropdown">
         <div id="contact">
-            perlegirl@protonmail.com<br>
+            <!-- perlegirl@protonmail.com<br> -->
             <a href="https://github.com/swanlake7" target="_blank">Github: swanlake7 &lt;link&gt; </a> <br>
             <a href="https://www.linkedin.com/in/pearljean/" target="_blank">LinkedIn &lt;link&gt; </a> <br>
 
