--- a/res.html
+++ b/res.html
@@ -131,6 +131,32 @@
 
                 <div class="sectionContent">
                     <article>
+                        <h2>Junior Software Engineer at Vanderlande</h2>
+                        <p class="subDetails">June- Dec 2020</p>
+                        <p class="undoS">Functioned as Scrum Master for a team of senior engineers, testers, and junior engineers.
+                        </p>
+                    </article>
+                    <br>
+
+                    <p>
+                        <br>
+                    </p>
+
+                    <article>
+                        <h2>Physical Chemistry PhD Student at the University of Texas Austin</h2>
+                        <p class="subDetails">July -Dec 2018</p>
+                        <p class="undoS">DFT calculation projects with the Sandia National Laboratory. 
+                        </p>
+                    </article>
+                    <br>
+
+                    <p>
+                        <br>
+                    </p>
+
+
+
+                    <article>
                         <h2>Research Assistant at Emory University</h2>
                         <p class="subDetails">2017-2018</p>
                         <p class="undoS">Collaborated with chemistry PhD candidates for physical experiments.
