--- a/res.html
+++ b/res.html
@@ -133,7 +133,15 @@
                     <article>
                         <h2>Junior Software Engineer at Vanderlande</h2>
                         <p class="subDetails">June- Dec 2020</p>
-                        <p class="undoS">Functioned as Scrum Master for a team of senior engineers, testers, and junior engineers.
+                        <p class="undoS">
+                            <div class="ka">Key Accomplishment:</div>
+                            <div class="listi">
+                                <ul>
+                                    <li>
+                                        Functioned as Scrum Master for a team of senior engineers, testers, and junior engineers.
+                                    </li>
+                                </ul>
+                            </div>
                         </p>
                     </article>
                     
@@ -145,7 +153,15 @@
                     <article>
                         <h2>Physical Chemistry PhD Student at the University of Texas Austin</h2>
                         <p class="subDetails">July -Dec 2018</p>
-                        <p class="undoS">DFT calculation projects with the Sandia National Laboratory. 
+                        <p class="undoS">
+                            <div class="ka">Key Accomplishments:</div>
+                            <div class="listi">
+                                <ul>
+                                    <li>
+                                        DFT calculation projects with the Sandia National Laboratory. 
+                                    </li>
+                                </ul>
+                            </div>
                         </p>
                     </article>
                     
