--- a/res.html
+++ b/res.html
@@ -159,14 +159,15 @@
                                 <ul>
                                     <li>
                                         DFT calculation projects with the Sandia National Laboratory. 
+                                        Oversaw college organic chemistry lab as a TA. 
                                     </li>
                                 </ul>
                             </div>
                         </p>
                     </article>
-                    <!-- <p>
+                    <p>
                         <br>
-                    </p> -->
+                    </p>
                     <article>
                         <h2>Research Assistant at Emory University</h2>
                         <p class="subDetails">2017-2018</p>
